workloads/medium-place/paperless-ngx/paperless-ngx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: paperless-ngx
  namespace: medium-place
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/version: 1.9.2

spec:
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
