workloads/medium-place/paperless-ngx/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: paperless-ngx
  namespace: medium-place
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/part-of: paperless-ngx

spec:
  ingressClassName: nginx-private

  tls:
    - hosts:
        - archive.medium.place
      secretName: archive.medium.place-tls

  rules:
    - host: archive.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paperless-ngx
                port:
                  name: http
